# lavalauncher

./: CONTRIBUTING.md  README.md  meson.build  meson_options.txt
.builds/: arch.yml  freebsd.yml
.github/workflows/: build.yml
doc/: lavalauncher.1.scd  lavalauncher.1.scd.in  meson.build
protocol/: meson.build
src/: bar.c  bar.h  config-parser.c  foreign-toplevel-management.c  item.c  item.h  lavalauncher.h  output.c  seat.c  signal-event-source.c  util.c  util.h  wayland-connection.c
src/types/: image_t.c
